Fix the condition for avoidance of double selection transformation

BUG:461788